# numerical-methods

./: .gitignore  README.md  README.pt-br.md  gaussian_elimination.py  main.py  metodos.py  metodos_alternative.py  metodos_range_kutta.py  pyproject.toml  requirements.txt  segredos.py
dashapp/: __init__.py  forms.py  models.py  views.py
dashapp/assets/: clinical-analytics.css  mathlive.js
dashapp/static/css/: style.css
dashapp/templates/: criarconta.html  feed.html  homepage.html  homepage1.html  index.html  navbar.html  perfil.html  previsao.html
tests/: main.py
