[tool.poetry]
name = "dashapp"
version = "0.1.0"
description = ""
authors = ["João Natividade <87316339+joaosnet@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dash = "^2.17.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-bcrypt = "^1.0.1"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pipreqs = "0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
