[tool.poetry]
name = "dashapp"
version = "0.1.0"
description = ""
authors = ["João Natividade <87316339+joaosnet@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dash = "^2.17.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
scipy = "^1.14.0"
sympy = "^1.13.2"
dash-dangerously-set-inner-html = "^0.0.2"
antlr4-python3-runtime = "4.11"
dash-mantine-components = "^0.14.4"
dash-iconify = "^0.1.2"
array-to-latex = "^0.92"

[tool.poetry.group.dev.dependencies]
pytest-env = "^1.1.3"

[tool.pytest_env]
DEBUG = "1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
